Use fixed width to avoid misalignment of titles

--- a/source/stylesheets/all.css.scss
+++ b/source/stylesheets/all.css.scss
@@ -81,5 +81,6 @@ $font-family-base: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 .entry-item-date {
-  margin-right: 20px;
+  display: inline-block;
+  width: 120px;
 }
